<resources>
    <string name="app_name">FirebaseRealtimeAK</string>
    <string name="save_data">Save Data</string>
    <string name="enter_salary">Enter salary</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_name">Enter name</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="emp_salary">Emp Salary</string>
    <string name="emp_id">Emp id</string>
    <string name="emp_name">Emp Name</string>
    <string name="emp_age">Emp Age</string>
    <string name="update_data">Update Data</string>
    <string name="employee_salary">Employee Salary</string>
    <string name="employee_age">Employee Age</string>
    <string name="employee_name">Employee Name</string>
    <string name="firebase_data">Firebase Data</string>
    <string name="image_upload">Image Upload</string>
    <string name="upload">Upload</string>
    <string name="show_all">Show All</string>
    <string name="choose_file">Choose file</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="show_uploads">Show Uploads</string>
</resources>