<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/etEmpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/employee_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="abcd" />

    <EditText
        android:id="@+id/etEmpAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/employee_age"
        android:minHeight="48dp"
        android:autofillHints="18" />

    <EditText
        android:id="@+id/etEmpSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/employee_salary"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="10000" />

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/update_data" />

</LinearLayout>
